docs: :memo: Add doc in Swagger from Login e Create User
