# config/routes.rb
@@ -1,6 +1,9 @@
 Rails.application.routes.draw do
   mount Rswag::Ui::Engine => '/api-docs'
   mount Rswag::Api::Engine => '/api-docs'
+  resources :users, param: :_username
+  post '/auth/login', to: 'authentication#login'
+  
   namespace :api do
     namespace :v1 do
       get 'operations_imported_stores/index'
