# swagger/v1/swagger.yaml
@@ -1,22 +1,94 @@
 ---
 openapi: 3.0.1
 info:
-  title: API V1
+  title: Desafio-Dev ByCoders
   version: v1
 paths:
   "/api/v1/operations_imported_stores/index":
-    parameters:
-    - name: store
-      in: query
-      description: name store
-      required: true
-      schema:
-        type: string
     get:
-      summary: list stores
+      summary: List Stores Operations Stores Imported
+      tags:
+      - Operations Stores Imported
+      security:
+      - bearer: []
+      parameters:
+      - name: store
+        in: query
+        description: name store
+        required: true
+        schema:
+          type: string
       responses:
         '200':
           description: successful
+
+  "/users":
+    post:
+      summary: Create new user
+      tags:
+      - Authentication
+      parameters: []
+      responses:
+        '201':
+          description: user created
+        '422':
+          description: invalid request
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                username: 
+                  type: string  
+                email:
+                  type: string
+                password:
+                  type: string
+                password_confirmation:
+                  type: string
+              example:
+                name: Testea
+                username: teste1a
+                email: teste1a@teste.com
+                password: '123456'
+                password_confirmation: '123456'
+              required:
+              - name
+              - username
+              - email
+              - password         
+              - password_confirmation
+  "/auth/login":
+    post:
+      summary: Login user
+      tags:
+      - Authentication
+      parameters: []
+      responses:
+        '201':
+          description: user created
+        '422':
+          description: invalid request
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties: 
+                email:
+                  type: string
+                password:
+                  type: string
+              example:
+                email: teste1a@teste.com
+                password: '123456'
+              required:
+              - email
+              - password                                 
+   
 servers:
 - url: http://localhost:3000
   variables:
